--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "firebase": "^7.15.5",
     "next": "^10.0.8",
-    "react": "16.13.1",
+    "react": "^17.0.1",
     "react-dom": "16.13.1"
   }
 }
