--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "firebase": "^7.15.5",
     "next": "^10.0.8",
     "react": "^17.0.1",
-    "react-dom": "16.13.1"
+    "react-dom": "^17.0.1"
   }
 }
