--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
     "firebase": "^7.15.5",
     "next": "^10.0.8",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-toastify": "^7.0.3"
   }
 }
