--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
     "firebase": "^7.15.5",
     "next": "^10.0.8",
+    "node-fetch": "^2.6.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
