--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
     "firebase": "^7.15.5",
+    "logrocket": "^2.1.2",
     "moment": "^2.29.1",
     "next": "^10.0.8",
     "node-fetch": "^2.6.1",
