--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "moment": "^2.29.1",
     "next": "^10.0.8",
     "node-fetch": "^2.6.1",
-    "node-sass": "^7.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
@@ -28,6 +27,7 @@
     "react-toastify": "^7.0.3"
   },
   "devDependencies": {
-    "next-sitemap": "^1.6.25"
+    "next-sitemap": "^1.6.25",
+    "sass": "^1.50.1"
   }
 }
