--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "next-sitemap",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.15.0",
@@ -14,15 +14,15 @@
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
     "file-saver": "^2.0.5",
-    "firebase": "^7.15.5",
+    "firebase": "^7.24.0",
     "logrocket": "^2.1.2",
     "mixpanel-browser": "^2.43.0",
     "moment": "^2.29.1",
-    "next": "^10.0.8",
+    "next": "^10.2.3",
     "node-fetch": "^2.6.1",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-scroll-progress-bar": "^1.1.13",
     "react-toastify": "^7.0.3"
   },
