--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-lottie": "^1.2.3",
     "react-scroll-progress-bar": "^1.1.13",
     "react-toastify": "^7.0.3"
   },
