middleware failed tests

--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "cors-anywhere": "^0.4.4",
     "file-saver": "^2.0.5",
     "firebase": "^7.24.0",
+    "js-cookie": "^3.0.1",
     "logrocket": "^2.1.2",
     "mixpanel-browser": "^2.43.0",
     "moment": "^2.29.1",
-    "next": "^10.2.3",
+    "next": "^12.1.6",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
