--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^17.0.2",
     "react-lottie": "^1.2.3",
     "react-scroll-progress-bar": "^1.1.13",
-    "react-toastify": "^7.0.3"
+    "react-toastify": "^7.0.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "next-sitemap": "^1.6.25",
