--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
+    "eslint-config-next": "^13.4.4",
     "file-saver": "^2.0.5",
     "firebase": "^7.24.0",
     "js-cookie": "^3.0.1",
     "logrocket": "^2.1.2",
     "mixpanel-browser": "^2.43.0",
     "moment": "^2.29.1",
-    "next": "^12.1.6",
+    "next": "^13.4.4",
     "node-fetch": "^2.6.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-scroll-progress-bar": "^1.1.13",
     "react-toastify": "^7.0.3",
