--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^2.3.0",
+    "@stripe/firestore-stripe-payments": "^0.0.6",
     "@stripe/stripe-js": "^1.15.0",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
