--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.3.0",
     "@react-pdf/renderer": "^2.3.0",
     "@stripe/firestore-stripe-payments": "^0.0.6",
     "@stripe/stripe-js": "^1.15.0",
