--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^18.2.0",
+    "react-image": "^4.1.0",
     "react-lottie": "^1.2.3",
     "react-scroll-progress-bar": "^1.1.13",
     "react-toastify": "^7.0.3",
