--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
+    "crisp-sdk-web": "^1.0.21",
     "eslint-config-next": "^13.4.4",
     "file-saver": "^2.0.5",
     "firebase": "^7.24.0",
