--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vitaely",
+  "name": "homeric-name-picker",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@calcom/embed-react": "^1.3.0",
-    "@react-pdf/renderer": "^2.3.0",
     "@stripe/firestore-stripe-payments": "^0.0.6",
     "@stripe/stripe-js": "^1.15.0",
     "bootstrap": "^4.6.0",
@@ -19,7 +18,7 @@
     "crisp-sdk-web": "^1.0.21",
     "eslint-config-next": "^13.4.4",
     "file-saver": "^2.0.5",
-    "firebase": "^7.24.0",
+    "firebase": "^10.8.1",
     "js-cookie": "^3.0.1",
     "logrocket": "^2.1.2",
     "mixpanel-browser": "^2.43.0",
@@ -30,7 +29,6 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^18.2.0",
     "react-image": "^4.1.0",
-    "react-lottie": "^1.2.3",
     "react-scroll-progress-bar": "^1.1.13",
     "react-toastify": "^7.0.3",
     "uuid": "^9.0.0"
