--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/firestore-stripe-payments": "^0.0.6",
     "@stripe/stripe-js": "^1.15.0",
     "bootstrap": "^4.6.0",
+    "canvas-confetti": "^1.9.3",
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
     "crisp-sdk-web": "^1.0.21",
@@ -26,7 +27,7 @@
     "next": "^13.4.4",
     "node-fetch": "^2.6.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^1.5.2",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.2.0",
     "react-image": "^4.1.0",
     "react-scroll-progress-bar": "^1.1.13",
