--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@calcom/embed-react": "^1.3.0",
+    "@sendgrid/mail": "^8.1.4",
     "@stripe/firestore-stripe-payments": "^0.0.6",
     "@stripe/stripe-js": "^1.15.0",
     "bootstrap": "^4.6.0",
@@ -20,6 +21,7 @@
     "eslint-config-next": "^13.4.4",
     "file-saver": "^2.0.5",
     "firebase": "^10.8.1",
+    "firebase-admin": "^13.0.1",
     "framer-motion": "^11.11.11",
     "js-cookie": "^3.0.1",
     "logrocket": "^2.1.2",
